tests/93_parser_error.scj
// Test 93: Parser error - missing closing paren
// Test: error handling for syntax errors
println(42
// ExpectError: Expected ')' after arguments
